force-app/main/default/objects/Role__c/Role__c.object-meta.xml
<CustomObject>
    <description>Store ownership of profile objects</description>
    <label>Role</label>
    <nameField>
        <displayFormat>ROL-{000000}</displayFormat>
        <label>Role name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>