force-app/main/default/objects/Role__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to financial product</description>
    <label>Financial Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Owner</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>