force-app/main/default/objects/Role__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Percentage of ownership</description>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>