force-app/main/default/objects/Role__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>Used to record the date and time the record was created on the finprod service
Updated by finprod</description>
    <label>Platform Created Date Time</label>
    <type>DateTime</type>
</CustomField>