force-app/main/default/objects/Role__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>to record the date and time the record was last modified on the platform
Updated by finprod service</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>